--- a/HealthySettle/HealthySettle/HomeGroup/ExactSearchGroup/ResultCellGroup/LivingTimeTVCell.xib
+++ b/HealthySettle/HealthySettle/HomeGroup/ExactSearchGroup/ResultCellGroup/LivingTimeTVCell.xib
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -13,11 +14,10 @@
             <rect key="frame" x="0.0" y="0.0" width="618" height="74"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="618" height="73"/>
+                <frame key="frameInset" width="618" height="73"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="list1_show_4_" translatesAutoresizingMaskIntoConstraints="NO" id="kNP-H0-5d2">
-                        <rect key="frame" x="13" y="8" width="57" height="57"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="20" id="3PJ-GN-0fO"/>
                             <constraint firstAttribute="width" secondItem="kNP-H0-5d2" secondAttribute="height" multiplier="1:1" id="sYb-tE-yd5"/>
@@ -29,67 +29,62 @@
                         </variation>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="入住" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2cx-xZ-6pj">
-                        <rect key="frame" x="80" y="8" width="30" height="57"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="30" id="Aku-xq-jTD"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2016-04-23" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O1n-sd-ZJz">
-                        <rect key="frame" x="120" y="8" width="80" height="57"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="80" id="8Rk-lV-Bz7"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                        <color key="textColor" red="0.76862745098039209" green="0.76862745098039209" blue="0.76862745098039209" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="textColor" red="0.76862745098039209" green="0.76862745098039209" blue="0.76862745098039209" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="离店" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="igv-gJ-Mvi">
-                        <rect key="frame" x="210" y="8" width="30" height="57"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="30" id="HGm-sL-IZG"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d1x-Jy-wga">
-                        <rect key="frame" x="574" y="8" width="40" height="57"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="40" id="nbk-XO-Tdz"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="10"/>
                         <state key="normal" title="修改  &gt;">
-                            <color key="titleColor" red="0.78431372549019607" green="0.78431372549019607" blue="0.78431372549019607" alpha="1" colorSpace="calibratedRGB"/>
+                            <color key="titleColor" red="0.78431372549019607" green="0.78431372549019607" blue="0.78431372549019607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         </state>
                     </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2016-04－25" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nIc-bQ-IoL">
-                        <rect key="frame" x="250" y="8" width="80" height="57"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="80" id="Q2J-24-OR4"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                        <color key="textColor" red="0.76862745098039209" green="0.76862745098039209" blue="0.76862745098039209" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="textColor" red="0.76862745098039209" green="0.76862745098039209" blue="0.76862745098039209" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
-                <color key="backgroundColor" red="0.97647058819999999" green="0.97647058819999999" blue="0.97647058819999999" alpha="1" colorSpace="calibratedRGB"/>
+                <color key="backgroundColor" red="0.97647058819999999" green="0.97647058819999999" blue="0.97647058819999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 <constraints>
-                    <constraint firstAttribute="bottomMargin" secondItem="nIc-bQ-IoL" secondAttribute="bottom" id="1kP-6j-OIo"/>
-                    <constraint firstItem="nIc-bQ-IoL" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="8kw-Ru-z5f"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="nIc-bQ-IoL" secondAttribute="bottom" constant="-8" id="1kP-6j-OIo"/>
+                    <constraint firstItem="nIc-bQ-IoL" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-8" id="8kw-Ru-z5f"/>
                     <constraint firstItem="2cx-xZ-6pj" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="A6b-8h-TNk"/>
                     <constraint firstAttribute="bottomMargin" secondItem="2cx-xZ-6pj" secondAttribute="bottom" id="Acc-vR-1Ta"/>
                     <constraint firstAttribute="bottomMargin" secondItem="kNP-H0-5d2" secondAttribute="bottom" id="Dqs-dV-G0y"/>
                     <constraint firstItem="O1n-sd-ZJz" firstAttribute="leading" secondItem="2cx-xZ-6pj" secondAttribute="trailing" constant="10" id="KJg-IE-oan"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="O1n-sd-ZJz" secondAttribute="bottom" id="KcF-XC-lF9"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="O1n-sd-ZJz" secondAttribute="bottom" constant="-8" id="KcF-XC-lF9"/>
                     <constraint firstAttribute="trailingMargin" secondItem="nIc-bQ-IoL" secondAttribute="trailing" constant="10" id="LnP-nq-zNc"/>
                     <constraint firstItem="nIc-bQ-IoL" firstAttribute="leading" secondItem="igv-gJ-Mvi" secondAttribute="trailing" constant="10" id="OsE-lI-jTj"/>
                     <constraint firstAttribute="bottomMargin" secondItem="igv-gJ-Mvi" secondAttribute="bottom" id="dg5-pC-oAm"/>
                     <constraint firstAttribute="trailingMargin" secondItem="d1x-Jy-wga" secondAttribute="trailing" constant="-4" id="iT5-5j-3g7"/>
                     <constraint firstAttribute="bottomMargin" secondItem="d1x-Jy-wga" secondAttribute="bottom" id="mBt-bw-UoN"/>
-                    <constraint firstItem="O1n-sd-ZJz" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="qQf-WZ-Zcz"/>
+                    <constraint firstItem="O1n-sd-ZJz" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-8" id="qQf-WZ-Zcz"/>
                     <constraint firstItem="kNP-H0-5d2" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="5" id="rHN-GV-lcT"/>
                     <constraint firstItem="d1x-Jy-wga" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="rWT-7X-5FR"/>
                     <constraint firstItem="igv-gJ-Mvi" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="uJK-JV-7ro"/>
@@ -103,6 +98,10 @@
                     </mask>
                 </variation>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="checkIn_label" destination="O1n-sd-ZJz" id="JZV-vh-bRA"/>
+                <outlet property="leave_label" destination="nIc-bQ-IoL" id="K6U-ez-Izz"/>
+            </connections>
             <point key="canvasLocation" x="373" y="198"/>
         </tableViewCell>
     </objects>
