--- a/HealthySettle/HealthySettle/HomeGroup/ExactSearchGroup/ResultCellGroup/HomeTVCell.xib
+++ b/HealthySettle/HealthySettle/HomeGroup/ExactSearchGroup/ResultCellGroup/HomeTVCell.xib
@@ -109,9 +109,9 @@
                     <constraint firstItem="9VC-PQ-aH2" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="5" id="bb2-d8-34W"/>
                     <constraint firstItem="ZDE-LT-1u2" firstAttribute="width" secondItem="fwu-Zd-5qu" secondAttribute="width" id="byI-V1-qta"/>
                     <constraint firstItem="gWL-f6-r94" firstAttribute="top" secondItem="8YL-2t-tUs" secondAttribute="bottom" id="d4f-su-uQm"/>
-                    <constraint firstItem="9VC-PQ-aH2" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="40" id="nbB-fm-zAD"/>
-                    <constraint firstItem="WFY-tU-J1H" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="pp9-o4-08n"/>
-                    <constraint firstItem="fwu-Zd-5qu" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="48" id="sxy-Eo-VMQ"/>
+                    <constraint firstItem="9VC-PQ-aH2" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="53" id="nbB-fm-zAD"/>
+                    <constraint firstItem="WFY-tU-J1H" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="13" id="pp9-o4-08n"/>
+                    <constraint firstItem="fwu-Zd-5qu" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="61" id="sxy-Eo-VMQ"/>
                     <constraint firstAttribute="trailingMargin" secondItem="fwu-Zd-5qu" secondAttribute="trailing" constant="10" id="vxH-Mm-jqV"/>
                     <constraint firstItem="WFY-tU-J1H" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="10" id="vxT-hQ-z94"/>
                     <constraint firstAttribute="trailingMargin" secondItem="ZDE-LT-1u2" secondAttribute="trailing" constant="10" id="yJ4-gs-POT"/>
