--- a/HealthySettle/HealthySettle/HomeGroup/ExactSearchGroup/ResultCellGroup/LivingTimeTVCell.xib
+++ b/HealthySettle/HealthySettle/HomeGroup/ExactSearchGroup/ResultCellGroup/LivingTimeTVCell.xib
@@ -73,8 +73,8 @@
                 <color key="backgroundColor" red="0.97647058819999999" green="0.97647058819999999" blue="0.97647058819999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 <constraints>
                     <constraint firstAttribute="bottomMargin" secondItem="nIc-bQ-IoL" secondAttribute="bottom" constant="-8" id="1kP-6j-OIo"/>
-                    <constraint firstItem="nIc-bQ-IoL" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-8" id="8kw-Ru-z5f"/>
-                    <constraint firstItem="2cx-xZ-6pj" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="A6b-8h-TNk"/>
+                    <constraint firstItem="nIc-bQ-IoL" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="5" id="8kw-Ru-z5f"/>
+                    <constraint firstItem="2cx-xZ-6pj" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="13" id="A6b-8h-TNk"/>
                     <constraint firstAttribute="bottomMargin" secondItem="2cx-xZ-6pj" secondAttribute="bottom" id="Acc-vR-1Ta"/>
                     <constraint firstAttribute="bottomMargin" secondItem="kNP-H0-5d2" secondAttribute="bottom" id="Dqs-dV-G0y"/>
                     <constraint firstItem="O1n-sd-ZJz" firstAttribute="leading" secondItem="2cx-xZ-6pj" secondAttribute="trailing" constant="10" id="KJg-IE-oan"/>
@@ -84,12 +84,12 @@
                     <constraint firstAttribute="bottomMargin" secondItem="igv-gJ-Mvi" secondAttribute="bottom" id="dg5-pC-oAm"/>
                     <constraint firstAttribute="trailingMargin" secondItem="d1x-Jy-wga" secondAttribute="trailing" constant="-4" id="iT5-5j-3g7"/>
                     <constraint firstAttribute="bottomMargin" secondItem="d1x-Jy-wga" secondAttribute="bottom" id="mBt-bw-UoN"/>
-                    <constraint firstItem="O1n-sd-ZJz" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-8" id="qQf-WZ-Zcz"/>
+                    <constraint firstItem="O1n-sd-ZJz" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="5" id="qQf-WZ-Zcz"/>
                     <constraint firstItem="kNP-H0-5d2" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="5" id="rHN-GV-lcT"/>
-                    <constraint firstItem="d1x-Jy-wga" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="rWT-7X-5FR"/>
-                    <constraint firstItem="igv-gJ-Mvi" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="uJK-JV-7ro"/>
+                    <constraint firstItem="d1x-Jy-wga" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="13" id="rWT-7X-5FR"/>
+                    <constraint firstItem="igv-gJ-Mvi" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="13" id="uJK-JV-7ro"/>
                     <constraint firstItem="2cx-xZ-6pj" firstAttribute="leading" secondItem="kNP-H0-5d2" secondAttribute="trailing" constant="10" id="uva-GW-pZl"/>
-                    <constraint firstItem="kNP-H0-5d2" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="x7f-KA-JBb"/>
+                    <constraint firstItem="kNP-H0-5d2" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="13" id="x7f-KA-JBb"/>
                     <constraint firstItem="igv-gJ-Mvi" firstAttribute="leading" secondItem="O1n-sd-ZJz" secondAttribute="trailing" constant="10" id="ylh-Tk-R5J"/>
                 </constraints>
                 <variation key="default">
